# ipywidgets-example

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  ipywidgets_example.json  package.json  pyproject.toml  pytest.ini  webpack.config.js
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
ipywidgets_example/: __init__.py  _frontend.py  _version.py  example.py
ipywidgets_example/nbextension/: extension.js
ipywidgets_example/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
